cmake_minimum_required(VERSION 3.13)
project(c_work C)

set(CMAKE_C_STANDARD 99)

add_executable(RankedList RankedList.c)
add_executable(SinglyLinkedList SinglyLinkedList.c)
add_executable(YueSeFuHuan YueSeFuHuan.c)
add_executable(PanDuanHuiWen_Inn PanDuanHuiWen_Inn.c)
add_executable(Zhan_JiBenCaoZuo Zhan_JiBenCaoZuo.c)
add_executable(DuiLie_JiBenCaoZuo DuiLie_JiBenCaoZuo.c)
add_executable(ErChaShu_JiBenCaoZuo ErChaShu_JiBenCaoZuo.c)
add_executable(Huffman Huffman.c)
add_executable(Tu Tu.c)
add_executable(Tu2 Tu2.c)
add_executable(Tu_YingYong Tu_YingYong.c)
add_executable(Student_Manager Student_Manager.c)